force-app/main/default/objects/BGR_Control_Plan__c/BGR_Control_Plan__c.object-meta.xml
<CustomObject>
    <label>BGR Control Plan</label>
    <nameField>
        <displayFormat>BCN-{0000}</displayFormat>
        <label>BGR Controlplan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BGR Control Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>