force-app/main/default/objects/BGR_Control_Plan__c/fields/Category_ID__c.field-meta.xml
<CustomField>
    <fullName>Category_ID__c</fullName>
    <label>Category ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>