force-app/main/default/objects/BGR_Control_Plan__c/fields/Connected_To_Tools__c.field-meta.xml
<CustomField>
    <fullName>Connected_To_Tools__c</fullName>
    <label>Connected To Tools</label>
    <length>50</length>
    <type>Text</type>
</CustomField>