force-app/main/default/objects/BGR_Control_Plan__c/fields/Cus_Operation_Number__c.field-meta.xml
<CustomField>
    <fullName>Cus_Operation_Number__c</fullName>
    <label>Operation Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>