force-app/main/default/objects/BGR_Control_Plan__c/fields/Cus_Test_OPNO__c.field-meta.xml
<CustomField>
    <fullName>Cus_Test_OPNO__c</fullName>
    <label>Test OPNO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>