force-app/main/default/objects/BGR_Control_Plan__c/fields/Data_Point__c.field-meta.xml
<CustomField>
    <fullName>Data_Point__c</fullName>
    <label>Data Point</label>
    <length>50</length>
    <type>Text</type>
</CustomField>