force-app/main/default/objects/BGR_Control_Plan__c/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <label>Data Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>