force-app/main/default/objects/BGR_Control_Plan__c/fields/Inner_Max__c.field-meta.xml
<CustomField>
    <fullName>Inner_Max__c</fullName>
    <label>Inner Max</label>
    <length>100</length>
    <type>Text</type>
</CustomField>