force-app/main/default/objects/BGR_Control_Plan__c/fields/Inspection_Code__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Code__c</fullName>
    <label>Inspection Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>