force-app/main/default/objects/BGR_Control_Plan__c/fields/Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Mandatory__c</fullName>
    <label>Mandatory</label>
    <length>50</length>
    <type>Text</type>
</CustomField>