force-app/main/default/objects/BGR_Control_Plan__c/fields/Norm_Type__c.field-meta.xml
<CustomField>
    <fullName>Norm_Type__c</fullName>
    <label>Norm Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>