force-app/main/default/objects/BGR_Control_Plan__c/fields/Operation_Number__c.field-meta.xml
<CustomField>
    <fullName>Operation_Number__c</fullName>
    <label>xxOperation Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>