force-app/main/default/objects/BGR_Control_Plan__c/fields/Outer_Max__c.field-meta.xml
<CustomField>
    <fullName>Outer_Max__c</fullName>
    <label>Outer Max</label>
    <length>100</length>
    <type>Text</type>
</CustomField>