force-app/main/default/objects/BGR_Control_Plan__c/fields/Outer_Min__c.field-meta.xml
<CustomField>
    <fullName>Outer_Min__c</fullName>
    <label>Outer Min</label>
    <length>100</length>
    <type>Text</type>
</CustomField>