force-app/main/default/objects/BGR_Control_Plan__c/fields/RGEUNT__c.field-meta.xml
<CustomField>
    <fullName>RGEUNT__c</fullName>
    <label>RGEUNT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-</fullName>
            </value>
            <value>
                <fullName>psig</fullName>
            </value>
            <value>
                <fullName>in. water</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>