force-app/main/default/objects/BGR_Control_Plan__c/fields/Simplified_Revision_Handling__c.field-meta.xml
<CustomField>
    <fullName>Simplified_Revision_Handling__c</fullName>
    <label>Simplified Revision Handling</label>
    <length>50</length>
    <type>Text</type>
</CustomField>