force-app/main/default/objects/BGR_Control_Plan__c/fields/Test_Operation_Desc__c.field-meta.xml
<CustomField>
    <fullName>Test_Operation_Desc__c</fullName>
    <label>Test Operation Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>