force-app/main/default/objects/BGR_Control_Plan__c/fields/Test_OPNO__c.field-meta.xml
<CustomField>
    <fullName>Test_OPNO__c</fullName>
    <label>Test OPNO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>