force-app/main/default/objects/BGR_Control_Plan__c/fields/Tool_ID__c.field-meta.xml
<CustomField>
    <fullName>Tool_ID__c</fullName>
    <label>Tool ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>