force-app/main/default/objects/BGR_Control_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cus_Test_OPNO__c</columns>
    <columns>Test_OPNO__c</columns>
    <columns>Test_Operation_Desc__c</columns>
    <columns>Norm_Type__c</columns>
    <columns>Data_Type__c</columns>
    <columns>Inspection_Code__c</columns>
    <columns>Outer_Min__c</columns>
    <columns>Nominal_Value__c</columns>
    <columns>Outer_Max__c</columns>
    <columns>Tool_ID__c</columns>
    <columns>Data_Point__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>